# duck-hunt

./: CMakeLists.txt  README.md  build.sh  install-dependencies.sh  mappings.imp
src/: actor.h  animations.h  animator.cpp  animator.h  clock.cpp  clock.h  collision.cpp  collision.h  constants.h  duck.cpp  duck.h  frames.cpp  frames.h  game.cpp  game.h  graphics.cpp  graphics.h  handlers.cpp  handlers.h  input.cpp  input.h  play.cpp  play.h  player.cpp  player.h  score.cpp  score.h  screens.cpp  screens.h  sound.cpp  sound.h  state.cpp  state.h  tally-util.cpp  tally-util.h  text.cpp  text.h  user-interface.cpp  user-interface.h
